kubernetes/apps/kube-system/cilium/config/networkpolicies/ingress/00-internal-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: label-ingress-internal-gateway
spec:
  description: "Allow ingress from internal Envoy gateway for pods with the ingress-internal-gateway label"
  endpointSelector:
    matchLabels:
      networkpolicy.sluxcloud/ingress-internal-gateway: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: internal
            io.kubernetes.pod.namespace: envoy-gateway
