kubernetes/apps/kube-system/cilium/config/networkpolicies/ingress/01-external-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: label-ingress-external-gateway
spec:
  description: "Allow ingress from external Envoy gateway for pods with the ingress-external-gateway label"
  endpointSelector:
    matchLabels:
      networkpolicy.sluxcloud/ingress-external-gateway: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: external
            io.kubernetes.pod.namespace: envoy-gateway
